# Evals-Project

./: .env.example  .gitignore  .ignore  README.md  pyproject.toml
datasets/golden/: test_script_generator.v1.jsonl
src/evals_project/: __init__.py  agent_contract.py  cli.py  config.py  dataset.py  evaluators.py  graph.py  judges.py  llm.py  report.py  runner.py  schemas.py
src/evals_project/validators/: __init__.py  gherkin.py  safety.py  script_static.py
tests/evals/: test_eval_runner.py
tests/unit/: test_config.py  test_dataset.py  test_validators.py
ui/: index.html  package-lock.json  package.json
ui/src/: main.jsx  styles.css
