[project]
name = "evals-project"
version = "0.1.0"
description = "Evaluation harness for a Playwright-BDD test script generator agent."
readme = "README.md"
requires-python = ">=3.11,<3.15"
dependencies = [
    "pydantic>=2.10,<3",
    "rich>=13.9,<15",
    "typer>=0.15,<1",
]

[project.optional-dependencies]
ai = [
    "langchain>=0.3,<0.4",
    "langchain-openai>=0.3,<0.4",
    "langgraph>=0.2,<0.4",
    "langsmith>=0.3,<0.5",
]
bdd = [
    "playwright>=1.50,<2",
    "pytest-bdd>=8,<9",
    "pytest-playwright>=0.7,<0.8",
]
dev = [
    "pytest>=8.3,<9",
    "ruff>=0.8,<1",
]

[project.scripts]
evals-project = "evals_project.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/evals_project"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
